--- a/index.html
+++ b/index.html
@@ -116,6 +116,37 @@
                              </div>
                          </div>
    
+                         <footer class="bg-dark text-white p-5">
+                          <div class="row">
+                            <div class="col-md-4">
+                              <h5> LAYANAN PELANGGAN</h5>
+                              <ul>
+                                <li> Pusat Bantuan </li>
+                                <li> Cara Pembelian</li>
+                                <li> Pengiriman </li>
+                                <li> Cara Pengembalian</li>
+                              </ul>
+                            </div>
+                            
+                            <div class="col-md-4">
+                              <h5> MITRA KERJASAMA</h5>
+                            <ul> 
+                              <li>UNICEF</li> 
+                              <li>ASEAN</li>
+                              <li>KPK</li>
+                              <li>WTO</li>
+                            </ul>
+                          </div>
+                          <div class="col-md-4">
+                            <h5> HUBUNGI KAMI</h5>
+                            <ul>
+                              <li>
+                                <a href="https://www.instagram.com/yogamuliab/">Instagram</a>
+                              </li>
+                          </div>
+                            
+                          </div>
+                        </footer>
 
 
     <!-- JavaScript Bundle with Popper -->
